# ontologia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  lefthook.yml  pyproject.toml  pyrightconfig.json  pytest.ini
examples/: README.md  example_01_basic_usage.py  example_02_complete_ecommerce.py  example_03_advanced_querying.py  example_04_relations.py  example_05_keyed_relations.py  example_06_time_travel.py  example_07_publishers.py  example_08_handlers.py  example_09_schema_migration.py  example_10_complete_queries.py  example_11_introspection.py  example_12_export_import.py  example_13_pagination_search.py  example_14_error_handling.py  example_15_cli_workflows.sh  example_16_s3_storage.py  example_17_typed_paths_and_list_aggregations.py
rfc/: 0001-runtime-session-and-state-application-api.md  0002-schema-versioning-explicit-migration-api.md  0003-relation-identity-with-optional-instance-key.md  0004-s3-storage-backend-with-parquet-commit-log.md  0005-explicit-commit-and-event-bus.md  0006-typed-dict-path-queries-and-aggregations.md  0007-json-field-indexing.md  0008-temporal-query-schema-version-boundary.md  0009-v2-storage-engines-current-schema-only.md
spec/: api.md  cli.md  storage-s3.md  storage-sqlite.md  vision.md
tests/: conftest.py  test_cron.py  test_ensure_iterable.py  test_event_runtime.py  test_existential_queries.py  test_filters.py  test_handlers.py  test_instance_key.py  test_integration.py  test_migration.py  test_path_queries.py  test_query.py  test_s3_integration.py  test_storage.py  test_storage_binding.py  test_storage_s3_logic.py  test_storage_v2_engine.py  test_type_spec.py  (+2 more)
(+51 files in other folders)
